Fixed overflow

--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ body{
         z-index: 1;
         grid-row: 1;
         grid-column: 1;
-        min-height: 50ch;
+        min-height: 40vh;
         height: auto;
         object-fit: cover;
     }
@@ -149,6 +149,7 @@ transparent black text box over it, with the upper margin being the same percent
     }
     .footer{
         align-items: center;
+        padding-left: 35%;
     }
 }
 
